# Practice2

./: .travis.yml  CMakeLists.txt  README.md  coverage_generator.sh  main.cpp  main_tests.cpp  run.sh  testng.sh
gtests/: tests.cpp
src/: CMakeLists.txt
src/Earley_algo_src/: algo.cpp  algo.h
src/grammar_src/: grammar.cpp  grammar.h
